@@ -452,6 +452,7 @@ class YiiBase
 		'CPhpMessageSource' => '/i18n/CPhpMessageSource.php',
 		'CTimestamp' => '/i18n/CTimestamp.php',
 		'CFileHelper' => '/utils/CFileHelper.php',
+		'CVarDumper' => '/utils/CVarDumper.php',
 		'CCaptchaValidator' => '/validators/CCaptchaValidator.php',
 		'CCompareValidator' => '/validators/CCompareValidator.php',
 		'CEmailValidator' => '/validators/CEmailValidator.php',
@@ -504,6 +505,8 @@ class YiiBase
 		'CHtml' => '/web/helpers/CHtml.php',
 		'CJSON' => '/web/helpers/CJSON.php',
 		'CJavaScript' => '/web/helpers/CJavaScript.php',
+		'CPradoViewRenderer - Copy' => '/web/renderers/CPradoViewRenderer - Copy.php',
+		'CPradoViewRenderer' => '/web/renderers/CPradoViewRenderer.php',
 		'CAutoComplete' => '/web/widgets/CAutoComplete.php',
 		'CCaptcha' => '/web/widgets/CCaptcha.php',
 		'CClipWidget' => '/web/widgets/CClipWidget.php',
